Support building docker/OCI images with Google jib